# theseus-agent-oracle-poc

./: .env.example  .gitignore  README.md  STATUS.md
.github/workflows/: launch-sniper-cron.yml
agents/: PRICE_ORACLE_SOUL.md  RECONCILIATION_POLICY.md  price_oracle.ship
cli/: Cargo.toml
cli/src/: aave.rs  agent.rs  config.rs  main.rs
contracts/: foundry.toml
contracts/deployments/: base-sepolia.md
contracts/script/: ConfigureMarket.s.sol  DeployAave.s.sol  DeployAviationSafetyReviewer.s.sol  DeployBridgeGuardian.s.sol  DeployFeed.s.sol  DeployGovernanceReviewer.s.sol  DeployLaunchSniperFund.s.sol  DeployMocks.s.sol  DeployPredictionMarketAdjudicator.s.sol  DeploySovereignFund.s.sol  DeployTerraFailsafe.s.sol
contracts/src/: AgentPriceFeed.sol  AviationSafetyReviewer.sol  BridgeGuardian.sol  GovernanceReviewer.sol  LaunchSniperFund.sol  PredictionMarketAdjudicator.sol  SovereignFund.sol  TerraFailsafe.sol
contracts/src/mocks/: FixedPriceFeed.sol  MockERC20.sol  MockWETH9.sol
contracts/test/: AviationSafetyReviewer.t.sol  BridgeGuardian.t.sol  GovernanceReviewer.t.sol  LaunchSniperFund.t.sol  PredictionMarketAdjudicator.t.sol  SovereignFund.t.sol  TerraFailsafe.t.sol
pallets/tool-override/: Cargo.toml  README.md
pallets/tool-override/src/: lib.rs
scripts/: demo.sh  setup_demo.sh  vendor_aave.sh
tools/: Cargo.toml  README.md  binance_ticker.rs  coinbase_orderbook.rs  uniswap_twap.rs
tools/src/: binance_ticker.rs  coinbase_orderbook.rs  evm_call.rs  lib.rs  types.rs  uniswap_twap.rs
ui/: .env.example  INTEGRATION.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
ui/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
ui/src/app/aave/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/adjudicate/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/aperture/: page.tsx
ui/src/app/aviation/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/bridge/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/calder/: page.tsx
ui/src/app/fund/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/governance/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/launch-sniper/: TickList.tsx  page.tsx
ui/src/app/marcellus/: page.tsx
ui/src/app/quill/: page.tsx
ui/src/app/terra/: layout.tsx  opengraph-image.tsx  page.tsx
ui/src/app/vellum/: page.tsx
ui/src/components/: CommitBadge.tsx  CommitmentSurfaceFooter.tsx  CounterfactualBadge.tsx  DecisionTimeline.tsx  FeedPanel.tsx  HostedDemoCard.tsx  JsonLd.tsx  PositionPanel.tsx  ScenarioControls.tsx  ShareLinkButton.tsx  TopBar.tsx  VenueCard.tsx
ui/src/components/aviation/: AviationScenarioControls.tsx  AviationTimeline.tsx  CertificationPanel.tsx  ReviewButton.tsx
ui/src/lib/: adjudicator-llm.ts  adjudicator-markets.ts  agent-llm.ts  aviation-llm.ts  aviation-scenario.ts  bridge-counterfactual.ts  bridge-llm.ts  bridge-scenario.ts  chain-context.ts  chain.ts  counterfactual.ts  deployed-contracts.ts  deployment.ts  feed-events.ts  feed-state.ts  format.ts  fund-llm.ts  fund-scenario.ts  governance-llm.ts  governance-scenario.ts  llm-stream.ts  mock-scenario.ts  mock-state.ts  substrate.ts  terra-llm.ts  terra-scenario.ts  types.ts  url-state.ts  use-typewriter.ts
(+65 files in other folders)
