[package]
name = "theseus-agent-oracle-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Theseus AI Inc"]
description = "Tool implementations for the price oracle agent in agent-oracle-poc"

[lib]
name = "theseus_agent_oracle_tools"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "time"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"

# Used for the Uniswap V3 pool reads (mainnet RPC call to observe()/slot0()).
alloy = { version = "0.8", features = ["network", "providers", "transport-http", "contract", "sol-types", "rpc-types-eth"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
